[tool.poetry]
name = "db-models"
version = "0.1.0"
description = ""
authors = ["Serhii <seruygrid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.21"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
